--- a/chatbot/requirements.txt
+++ b/chatbot/requirements.txt
@@ -1,1 +1,6 @@
-wechaty
+wechatykjhgjgjhgjhg
+////////////////////////////
+////////////////////
+////////////////////
+/////////////////////
+/////////////////
